--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,7 +458,7 @@ h6 {
 .footer {
   color: var(--default-color);
   background-color: var(--background-color);
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/JNGQE9951.png") top center no-repeat;
   background-size: cover;
   font-size: 14px;
   position: relative;
@@ -676,7 +676,7 @@ h6 {
 
 .page-title:before {
   content: "";
-  background-color: color-mix(in srgb, var(--background-color), transparent 65%);
+  background-color: color-mix(in srgb, var(--background-color), transparent %);
   position: absolute;
   inset: 0;
 }
