changed footer image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,7 +458,7 @@ h6 {
 .footer {
   color: var(--default-color);
   background-color: var(--background-color);
-  background: url("../img/JNGQE9951.png") top center no-repeat;
+  background: url("C:/Users/miasc/git/miaschwing/EN_newtemplate/images/buildings.png") top center no-repeat;
   background-size: cover;
   font-size: 14px;
   position: relative;
