--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,6 +52,7 @@
   --contrast-color: #ffffff;
 }
 
+
 /* Smooth scroll */
 :root {
   scroll-behavior: smooth;
@@ -676,6 +677,18 @@ h6 {
   position: relative;
 }
 
+.page-title-state {
+  color: var(--default-color);
+  background-color: var(--background-color);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 90px 0 60px 0;
+  text-align: center;
+  position: relative;
+  height: 240px; 
+}
+
 .page-title:before {
   content: "";
   background-color: color-mix(in srgb, var(--background-color), transparent %);
@@ -684,6 +697,12 @@ h6 {
 }
 
 .page-title h1 {
+  font-size: 56px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.page-title-state h1 {
   font-size: 56px;
   font-weight: 500;
   margin-bottom: 10px;
