--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1092,6 +1092,36 @@ section,
 /*--------------------------------------------------------------
 # Constructions Section
 --------------------------------------------------------------*/
+.constructions h3 {
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 25px;
+  padding-bottom: 25px;
+  position: relative;
+}
+
+.constructions h3:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 4px;
+  background: var(--accent-color);
+  left: 0;
+  bottom: 0;
+}
+
+.constructions ul {
+  list-style: none;
+  padding-top: 10px;
+}
+
+.constructions ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: var(--accent-color);
+}
+
 .constructions .card-item {
   background-color: var(--surface-color);
   border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
@@ -1100,7 +1130,7 @@ section,
 }
 
 .constructions .card-item .card-bg {
-  min-height: 300px;
+  min-height: 250px;
   position: relative;
 }
 
@@ -1123,12 +1153,41 @@ section,
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 15px;
+  justify-content: left;
+}
+
+.constructions .card-item h4 a {
+  color: var(--heading-color);
+  transition: 0.3s;
+}
+
+.constructions .card-item h4 a:hover {
+  color: var(--accent-color);
 }
 
 .constructions .card-item p {
   color: color-mix(in srgb, var(--default-color), transparent 40%);
   margin: 0;
 }
+
+
+.constructions .features-image {
+  position: relative;
+  min-height: 400px;
+  padding-bottom: 30px;
+}
+
+
+.constructions .features-image img {
+  position:absolute;
+  inset: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
 
 /*--------------------------------------------------------------
 # Services Section
@@ -1282,6 +1341,7 @@ section,
   font-weight: 700;
   margin-bottom: 10px;
   font-size: 18px;
+  justify-content: left;
 }
 
 .alt-services .icon-box h4 a {
