--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1187,23 +1187,15 @@ section,
 /* Compact intro text at top-left of State Eviction Maps & Profiles */
 .constructions .state-intro-compact {
   text-align: left;
-  max-width: 420px;
+  max-width: 100%;
   padding-left: 0;
-  align-self: flex-start;
+  align-self: center;
 }
 
 .constructions .state-intro-compact h3 {
-  margin-bottom: 0;
+  margin-bottom: 1.5rem;
   padding-bottom: 12px;
   margin-top: 0;
-}
-
-.constructions .state-intro-compact .state-intro-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex: 1;
-  margin-top: 1.5rem;
 }
 
 .constructions .state-intro-compact p {
@@ -1216,27 +1208,27 @@ section,
 /* Responsive iframe map sizing */
 .constructions .map-embed {
   width: 100%;
-  height: 520px;
+  height: 400px;
   border: 0;
 }
 
 @media (max-width: 1199px) {
   .constructions .map-embed {
-    height: 460px;
+    height: 380px;
   }
 }
 
 @media (max-width: 991px) {
   /* Stack under text automatically via Bootstrap; ensure adequate height */
   .constructions .map-embed {
-    height: 420px;
+    height: 350px;
     margin-top: 10px;
   }
 }
 
 @media (max-width: 575px) {
   .constructions .map-embed {
-    height: 360px;
+    height: 300px;
   }
 }
 
